tests/semantic/number_constants/number_constants.err
Error: positive integer constant must be in range [0, 2147483647] in file number_constants.dl at line 6
R(2147483648). // error: out of range
--^-----------------------------------
Error: positive integer constant must be in range [0, 2147483647] in file number_constants.dl at line 10
R(-2147483648). // error: out of range
---^-----------------------------------
2 errors generated, evaluation aborted
